# agent-run-ledger

./: .gitignore  BUG-REPORT-fable-fallback.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  SECURITY.md  demo.py  pyproject.toml  TEMParl_out.txt
.github/ISSUE_TEMPLATE/: bug_report.md  receipt_report.md
.github/workflows/: ci.yml
docs/: openai-adapter-notes.md  prescription-taxonomy.md  prescription-taxonomy.md.codex-draft
docs/adr/: ADR-001-redaction-chokepoint.md  ADR-002-egress-chokepoint.md
fixtures/: clean_run.json  golden_retry_loop.json  instrumented_retry_loop_l2.json  live_retry_loop_interleaved.json
scripts/: README.md  demo_repair_receipt.py  failure_detectors.py  git_rework_miner.py  live_capture_harness.py  phase0_corpus.py  phase0_labeler.py  phase0_session_index.py  xsession_failure_decipher.py
src/agent_run_ledger/: __init__.py  __main__.py  cli.py
src/agent_run_ledger/adapters/: __init__.py  _facts.py  claude_code.py  codex.py  openai.py
src/agent_run_ledger/core/: __init__.py  claudemd.py  compare.py  cost.py  demo.py  experiment.py  io.py  models.py  prescriptions.py  propose.py  provenance.py  receipt.py  report.py  retries.py  selftest.py  serve.py  storage.py
tests/: conftest.py  test_callgraph.py  test_claude_code_adapter.py  test_claudemd_block.py  test_cli.py  test_codex_adapter.py  test_codex_routing.py  test_compare.py  test_compare_cost_on_read.py  test_compare_unpriced.py  test_console_encoding.py  test_cost.py  test_cross_turn_retry.py  test_defensive_parsing.py  test_egress_guards.py  test_error_class.py  test_experiment_math.py  test_export_scrub.py  test_failure_detectors.py  test_governed_apply.py  test_init_hooks.py  test_install_independence.py  test_io.py  test_l2_verifier_sufficiency.py  test_leak_matrix.py  test_live_capture_receipt.py  test_live_trace_shape.py  test_mark_applied.py  test_migration.py  test_models.py  test_openai_adapter.py  test_outcome_slot.py  test_p1_adversarial_regressions.py  test_p1_rereview_regressions.py  test_patch_safety.py  test_phase0_labeler.py  test_prescriptions.py  test_provenance.py  test_receipt.py  test_repair_target_locality.py  (+11 more)
tests/fixtures/: openai_recorded_trace.json
tests/fixtures/claude_code/: abstain_edit_completion_session.jsonl  abstain_user_directed_deletion_session.jsonl  clean_session.jsonl  lie_no_op_completion_session.jsonl  lie_test_deletion_session.jsonl  qa_session.jsonl  retry_session.jsonl
tests/fixtures/codex/: README.md  abstain_fix_then_rerun.jsonl  abstain_same_turn_fanout.jsonl  fire_no_edit_retry.jsonl  fire_test_deletion_lie.jsonl
tests/fixtures/demo_target/: agent_config.py
