[project]
name = "agent-run-ledger"
version = "0.1.0"
description = "Local-first run ledger for AI agent cost, replay, compare, and fix artifacts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "rich>=13.0",
  "typer>=0.12",
]

[project.optional-dependencies]
openai = [
  "openai-agents>=0.0.0",
]

[project.scripts]
arl = "agent_run_ledger.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

