[project]
name = "agent-run-ledger"
version = "0.2.0"
description = "Local-first run ledger for AI agent cost, replay, compare, and fix artifacts."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "rich>=13.0",
  "typer>=0.12",
]

[project.optional-dependencies]
openai = [
  "openai-agents>=0.0.0",
]
dev = [
  "pytest>=8",
]

[project.scripts]
arl = "agent_run_ledger.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# scripts/ holds the shared live-capture harness (B1 gate): the SDK-driving code
# is reused by both the demo and tests/test_live_capture_receipt.py, so both
# exercise the SAME real-run path. It is NOT part of the shipped package.
pythonpath = ["src", "scripts"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
