[project]
name = "agent-run-ledger"
version = "0.2.0"
description = "Local-first verdict layer for AI coding-agent runs: graded repair receipts and a loop-gating exit code. No outbound network code; optional dashboard binds 127.0.0.1 only."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Hung Huynh" }]
keywords = ["ai-agents", "claude-code", "codex", "verdict", "receipts", "local-first"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
]
requires-python = ">=3.12"
dependencies = [
  "rich>=13.0",
  "typer>=0.12",
]

[project.urls]
Repository = "https://github.com/huyn7539/agent-run-ledger"
Issues = "https://github.com/huyn7539/agent-run-ledger/issues"

[project.optional-dependencies]
openai = [
  "openai-agents>=0.0.0",
]
dev = [
  "pytest>=8",
]

[project.scripts]
arl = "agent_run_ledger.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
# scripts/ holds the shared live-capture harness (B1 gate): the SDK-driving code
# is reused by both the demo and tests/test_live_capture_receipt.py, so both
# exercise the SAME real-run path. It is NOT part of the shipped package.
pythonpath = ["src", "scripts"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
